--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/styled": "^11.1.5",
+    "@emotion/react": "^11.1.5",
+    "bootstrap": "^4.6.0",
+    "sass": "^1.32.8",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1"
